[gd_scene load_steps=33 format=3 uid="uid://ctav3ifwojtpj"]

[ext_resource type="Script" path="res://OfficeScene.gd" id="1_qnyb5"]
[ext_resource type="Script" path="res://TopLevelScene.gd" id="1_srqoq"]
[ext_resource type="Script" path="res://OfficeCanvasLayer.gd" id="2_cvmvr"]
[ext_resource type="Script" path="res://OfficeCamera2D.gd" id="2_j74wf"]
[ext_resource type="Texture2D" uid="uid://c7fp01de041xd" path="res://images/full-office-canvas-1600x720.png" id="2_kn5wx"]
[ext_resource type="Texture2D" uid="uid://dhxcxbganwsnt" path="res://images/left-door.jpg" id="3_fwji1"]
[ext_resource type="Script" path="res://LeftDoor.gd" id="4_huqt6"]
[ext_resource type="Texture2D" uid="uid://bx24cshtcc4jd" path="res://images/right-door.jpg" id="5_xxbbi"]
[ext_resource type="Script" path="res://RightDoor.gd" id="6_jwc1y"]
[ext_resource type="Texture2D" uid="uid://bhayiq0p0nbh7" path="res://images/left-door-button-off.jpg" id="7_dbhn4"]
[ext_resource type="AudioStream" uid="uid://ckhoat3nr0iw5" path="res://audio/Metal Grate Stop - QuickSounds.com.mp3" id="7_wygki"]
[ext_resource type="Texture2D" uid="uid://blivyacr0hb4m" path="res://images/left-door-button-on.jpg" id="8_v55br"]
[ext_resource type="Texture2D" uid="uid://cpajxgbsb7wtd" path="res://images/left-light-button-off.jpg" id="9_arava"]
[ext_resource type="Texture2D" uid="uid://bru14pcieb427" path="res://images/left-light-button-on.jpg" id="10_jtrei"]
[ext_resource type="Texture2D" uid="uid://daf2g2okq38hl" path="res://images/right-door-button-off.jpg" id="12_2fqgp"]
[ext_resource type="Texture2D" uid="uid://buuo81eer5a3o" path="res://images/right-door-button-on.jpg" id="13_irrux"]
[ext_resource type="Texture2D" uid="uid://ciuav3gbm6n0i" path="res://images/right-light-button-off.jpg" id="14_ggjit"]
[ext_resource type="Texture2D" uid="uid://jox3iqdffkwc" path="res://images/right-light-button-on.jpg" id="15_rxp7w"]
[ext_resource type="FontFile" uid="uid://dhg8lahcvk50i" path="res://PublicPixel.ttf" id="16_lfodi"]
[ext_resource type="Script" path="res://RoomCamScene.gd" id="19_gjox2"]
[ext_resource type="Texture2D" uid="uid://cnpoo8hl74mn" path="res://images/cam1.png" id="20_5122n"]
[ext_resource type="Texture2D" uid="uid://dy5vlpqxrnape" path="res://images/static_image1.png" id="21_t8ojp"]
[ext_resource type="Texture2D" uid="uid://bw1xl5risqdbn" path="res://images/static_image2.png" id="22_de3cv"]
[ext_resource type="Texture2D" uid="uid://cnvt6digw0qmm" path="res://images/static_image3.png" id="23_4w260"]
[ext_resource type="Texture2D" uid="uid://c574ob5yo3c2a" path="res://images/map_base.png" id="24_ylyq4"]
[ext_resource type="Script" path="res://RoomCamera2D.gd" id="25_xsmln"]

[sub_resource type="Animation" id="Animation_1ihrx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullOfficeSprite/LeftDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-603.333, -720)]
}

[sub_resource type="Animation" id="Animation_eychv"]
resource_name = "open_door"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullOfficeSprite/LeftDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-603.333, 0), Vector2(-603.333, -720)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rtrty"]
_data = {
"RESET": SubResource("Animation_1ihrx"),
"open_door": SubResource("Animation_eychv")
}

[sub_resource type="Animation" id="Animation_4gyey"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576.667, -720)]
}

[sub_resource type="Animation" id="Animation_twj1s"]
resource_name = "open_door"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576.667, 0), Vector2(576.667, -720)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlwcy"]
_data = {
"RESET": SubResource("Animation_4gyey"),
"open_door": SubResource("Animation_twj1s")
}

[node name="TopLevelScene" type="Node2D"]
process_mode = 1
script = ExtResource("1_srqoq")

[node name="OfficeScene" type="Node2D" parent="."]
position = Vector2(576, 324)
script = ExtResource("1_qnyb5")

[node name="OfficeCanvasLayer" type="CanvasLayer" parent="OfficeScene"]
script = ExtResource("2_cvmvr")

[node name="PowerLeftLabel" type="Label" parent="OfficeScene/OfficeCanvasLayer"]
offset_left = 19.0
offset_top = 548.0
offset_right = 184.0
offset_bottom = 567.0
theme_override_fonts/font = ExtResource("16_lfodi")
theme_override_font_sizes/font_size = 15
text = "Power left:"
metadata/_edit_use_anchors_ = true

[node name="UsageLabel" type="Label" parent="OfficeScene/OfficeCanvasLayer"]
offset_left = 19.0
offset_top = 585.0
offset_right = 184.0
offset_bottom = 604.0
theme_override_fonts/font = ExtResource("16_lfodi")
theme_override_font_sizes/font_size = 15
text = "Usage:"
metadata/_edit_use_anchors_ = true

[node name="NightLabel" type="Label" parent="OfficeScene/OfficeCanvasLayer"]
offset_left = 1013.0
offset_top = 60.0
offset_right = 1121.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("16_lfodi")
theme_override_font_sizes/font_size = 15
text = "Night 1"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PowerLabel" type="Label" parent="OfficeScene/OfficeCanvasLayer"]
offset_left = 185.0
offset_top = 547.0
offset_right = 265.0
offset_bottom = 570.0
theme_override_fonts/font = ExtResource("16_lfodi")
theme_override_font_sizes/font_size = 20
metadata/_edit_use_anchors_ = true

[node name="TODLabel" type="Label" parent="OfficeScene/OfficeCanvasLayer"]
offset_left = 994.0
offset_top = 25.0
offset_right = 1134.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("16_lfodi")
theme_override_font_sizes/font_size = 28
text = "12 AM"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FullOfficeSprite" type="Sprite2D" parent="OfficeScene"]
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_kn5wx")

[node name="LeftDoor" type="Sprite2D" parent="OfficeScene/FullOfficeSprite"]
unique_name_in_owner = true
position = Vector2(-603.333, -720)
texture = ExtResource("3_fwji1")
script = ExtResource("4_huqt6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="OfficeScene/FullOfficeSprite/LeftDoor"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_rtrty")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="OfficeScene/FullOfficeSprite/LeftDoor"]
stream = ExtResource("7_wygki")

[node name="RightDoor" type="Sprite2D" parent="OfficeScene/FullOfficeSprite"]
unique_name_in_owner = true
position = Vector2(576.667, -720)
texture = ExtResource("5_xxbbi")
script = ExtResource("6_jwc1y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="OfficeScene/FullOfficeSprite/RightDoor"]
libraries = {
"": SubResource("AnimationLibrary_qlwcy")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="OfficeScene/FullOfficeSprite/RightDoor"]
stream = ExtResource("7_wygki")

[node name="OfficeCamera2D" type="Camera2D" parent="OfficeScene"]
script = ExtResource("2_j74wf")

[node name="OfficeCameraControl" type="Control" parent="OfficeScene/OfficeCamera2D"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="OfficeScene"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="LeftDoorButton" type="TextureButton" parent="OfficeScene/Control"]
layout_mode = 0
offset_left = -687.0
offset_top = -59.0
offset_right = -647.0
offset_bottom = 25.0
scale = Vector2(0.9, 0.9)
toggle_mode = true
texture_normal = ExtResource("7_dbhn4")
texture_pressed = ExtResource("8_v55br")
metadata/_edit_use_anchors_ = true

[node name="LeftLightButton" type="TextureButton" parent="OfficeScene/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -689.0
offset_top = 47.0
offset_right = -649.0
offset_bottom = 134.0
scale = Vector2(0.915, 0.915)
toggle_mode = true
texture_normal = ExtResource("9_arava")
texture_pressed = ExtResource("10_jtrei")
metadata/_edit_use_anchors_ = true

[node name="RightDoorButton" type="TextureButton" parent="OfficeScene/Control"]
layout_mode = 0
offset_left = 647.0
offset_top = -47.0
offset_right = 687.0
offset_bottom = 37.0
scale = Vector2(0.915, 0.915)
toggle_mode = true
texture_normal = ExtResource("12_2fqgp")
texture_pressed = ExtResource("13_irrux")
metadata/_edit_use_anchors_ = true

[node name="RightLightButton" type="TextureButton" parent="OfficeScene/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 648.0
offset_top = 58.0
offset_right = 690.0
offset_bottom = 147.0
scale = Vector2(0.915, 0.915)
toggle_mode = true
texture_normal = ExtResource("14_ggjit")
texture_pressed = ExtResource("15_rxp7w")
metadata/_edit_use_anchors_ = true

[node name="RoomCamScene" type="Node2D" parent="."]
script = ExtResource("19_gjox2")

[node name="Cam1BackgroundSprite" type="Sprite2D" parent="RoomCamScene"]
position = Vector2(720, 324)
scale = Vector2(0.9, 0.9)
texture = ExtResource("20_5122n")

[node name="RoomCamCanvasLayer" type="CanvasLayer" parent="RoomCamScene"]

[node name="StaticImage1" type="Sprite2D" parent="RoomCamScene/RoomCamCanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(720, 324)
scale = Vector2(0.9, 0.9)
texture = ExtResource("21_t8ojp")

[node name="StaticImage2" type="Sprite2D" parent="RoomCamScene/RoomCamCanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(720, 324)
scale = Vector2(0.9, 0.9)
texture = ExtResource("22_de3cv")

[node name="StaticImage3" type="Sprite2D" parent="RoomCamScene/RoomCamCanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(720, 324)
scale = Vector2(0.9, 0.9)
texture = ExtResource("23_4w260")

[node name="MapBase" type="Sprite2D" parent="RoomCamScene/RoomCamCanvasLayer"]
position = Vector2(919, 482)
scale = Vector2(0.4, 0.4)
texture = ExtResource("24_ylyq4")

[node name="Cam1Button" type="Button" parent="RoomCamScene/RoomCamCanvasLayer"]
offset_left = 695.0
offset_top = 346.0
offset_right = 758.0
offset_bottom = 394.0
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_lfodi")
toggle_mode = true
action_mode = 0
text = "CAM
1"
alignment = 0

[node name="Cam2Button" type="Button" parent="RoomCamScene/RoomCamCanvasLayer"]
offset_left = 689.0
offset_top = 422.0
offset_right = 752.0
offset_bottom = 470.0
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_lfodi")
toggle_mode = true
action_mode = 0
text = "CAM
2"
alignment = 0

[node name="Cam3Button" type="Button" parent="RoomCamScene/RoomCamCanvasLayer"]
offset_left = 862.0
offset_top = 335.0
offset_right = 925.0
offset_bottom = 383.0
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_lfodi")
toggle_mode = true
action_mode = 0
text = "CAM
3"
alignment = 0

[node name="Cam4Button" type="Button" parent="RoomCamScene/RoomCamCanvasLayer"]
offset_left = 783.0
offset_top = 486.0
offset_right = 846.0
offset_bottom = 534.0
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_lfodi")
toggle_mode = true
action_mode = 0
text = "CAM
4"
alignment = 0

[node name="Cam5Button" type="Button" parent="RoomCamScene/RoomCamCanvasLayer"]
offset_left = 1057.0
offset_top = 421.0
offset_right = 1120.0
offset_bottom = 469.0
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_lfodi")
toggle_mode = true
action_mode = 0
text = "CAM
5"
alignment = 0

[node name="Cam6Button" type="Button" parent="RoomCamScene/RoomCamCanvasLayer"]
offset_left = 937.0
offset_top = 582.0
offset_right = 1000.0
offset_bottom = 630.0
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_lfodi")
toggle_mode = true
action_mode = 0
text = "CAM
6"
alignment = 0

[node name="RoomCamera2D" type="Camera2D" parent="RoomCamScene"]
position = Vector2(576, 324)
script = ExtResource("25_xsmln")

[node name="GameState" type="Node" parent="."]
unique_name_in_owner = true

[connection signal="toggled" from="OfficeScene/Control/LeftDoorButton" to="OfficeScene/FullOfficeSprite/LeftDoor" method="_on_left_door_button_toggled"]
[connection signal="toggled" from="OfficeScene/Control/LeftLightButton" to="OfficeScene/FullOfficeSprite/LeftDoor" method="_on_left_light_button_toggled"]
[connection signal="toggled" from="OfficeScene/Control/RightDoorButton" to="OfficeScene/FullOfficeSprite/RightDoor" method="_on_right_door_button_toggled"]
[connection signal="toggled" from="OfficeScene/Control/RightLightButton" to="OfficeScene/FullOfficeSprite/RightDoor" method="_on_right_light_button_toggled"]
